[gd_scene load_steps=10 format=3 uid="uid://ebsqjsouorq6"]

[ext_resource type="PackedScene" uid="uid://c6wgmd2hply66" path="res://Old_Shit/Scenes/player_rigid_body_2d.tscn" id="1_883q0"]
[ext_resource type="Script" path="res://Old_Shit/Scripts/gs_explore_mode.gd" id="1_lep6d"]
[ext_resource type="Script" path="res://Old_Shit/Scenes/player_follow_cam.gd" id="2_nhb64"]
[ext_resource type="PackedScene" uid="uid://tlfpk2gax8wh" path="res://Old_Shit/Scenes/explore_mode_grid.tscn" id="4_vp47o"]
[ext_resource type="Script" path="res://Old_Shit/Scripts/race_start_trigger.gd" id="5_5gja2"]
[ext_resource type="Texture2D" uid="uid://saj3khd0gp18" path="res://Old_Shit/Images/race_start_01.png" id="6_4las1"]
[ext_resource type="Texture2D" uid="uid://bhlvm6s2eno3i" path="res://Old_Shit/Images/race_start_02.png" id="7_ard68"]
[ext_resource type="FontFile" uid="uid://drgsxmxrovwlu" path="res://Old_Shit/Fonts/pcsenior.ttf" id="8_6jwhr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huutb"]
size = Vector2(311, 877)

[node name="gs_explore_mode" type="Node2D"]
script = ExtResource("1_lep6d")

[node name="PlayerFollowCam" type="Camera2D" parent="."]
zoom = Vector2(0.25, 0.25)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 12.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("2_nhb64")

[node name="PlayerRigidBody2D" parent="." instance=ExtResource("1_883q0")]
z_as_relative = false
position = Vector2(392, 215)

[node name="explore_mode_grid" parent="." instance=ExtResource("4_vp47o")]
z_index = -1000
z_as_relative = false
position = Vector2(410, 209)

[node name="race_start_trigger_01" type="Area2D" parent="."]
position = Vector2(12382, 190)
script = ExtResource("5_5gja2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="race_start_trigger_01"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_huutb")

[node name="Sprite2D" type="Sprite2D" parent="race_start_trigger_01"]
z_index = -900
z_as_relative = false
rotation = 1.5708
scale = Vector2(1.51, 1.51)
texture = ExtResource("6_4las1")

[node name="race_start_trigger_02" type="Area2D" parent="."]
position = Vector2(7347, 3995)
script = ExtResource("5_5gja2")
race_id = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="race_start_trigger_02"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_huutb")

[node name="Sprite2D" type="Sprite2D" parent="race_start_trigger_02"]
z_index = -900
rotation = 1.5708
scale = Vector2(1.51, 1.51)
texture = ExtResource("7_ard68")

[node name="ExploreCanvasLayer" type="CanvasLayer" parent="."]

[node name="start_race_panel" type="Panel" parent="ExploreCanvasLayer"]
offset_left = 63.0
offset_top = 272.0
offset_right = 1076.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="ExploreCanvasLayer/start_race_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.5
offset_top = -31.0
offset_right = 501.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("8_6jwhr")
theme_override_font_sizes/font_size = 66
text = "Start the Race?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quest_marker" type="Node2D" parent="." groups=["quest_marker"]]
z_as_relative = false
position = Vector2(12272, 196)
